  added testcase for validation. [Dennis]
+ Added the atkDataGrid which replaces atkRecordList for the admin and
  select handlers and the atkOneToManyRelation. The atkDataGrid allows
  browsing through records without page reloads. [Peter]
+ Added atkTextAttribute::setWrapMode to specify the wrap mode for
  the textarea (by default "soft"). [Peter]
* In atkCountryAttribute i changed the world_countries_shortlist. 
  Germany was missing and the UK was listed twice, and canada is added now.
  [Erik]
* Added html entities to the country definitions in atkCountryAttribute and
  html_decode them before putting them in the array so that it should contain
  the right character. [Erik]
* A test will now fail if a specified class cannot be found. [Peter]
* Refactored atkDateAttribute a bit, so we don't need the include.php file to
  register it's javascript. This makes the use of class.atkdateattribute.js.inc
  deprecated. Also added a call to the onChange handler for the input field if
  the AF_DATE_STRING flag is used. [Tjeerd,Peter]
* atkDebugger now only stores query traces if debuglevel > 2. [Tjeerd]
* Fixed non static call to atkFileUtils. [Yannick]
* Atkaggregatedcolumn use method label() for lebel generation. [Yury]
* Fix parameter order in atkmanytoonerelation->getSearchCondition() - the same
  as in other attribute/relation. [Yury]
* Fixed fatal error on some occasions when using the update action on a node
  with a onetoone relation. [Harrie]
* Fix use of non-numeric keys in atkOneToManyRelation. [Marc]
* Improve atknavigator->getAvailableIndeces(), it now works with Oracle too.
  [Yury]
* Fix atkquery - select query can contains only expression too (not only
  fields). [Yury]
* Add support partial_refresh method and testcases for atkcalculatorattribute.
  [Yury]
* Fixed atkTagAttribute (javascript was not working when the atkTagAttribute
  was used in a relation). [Harrie]
* Fix dispay seconds in edit mode - atktimeattribute. [Yury]